cabal-version: >=1.10
name: graphql-engine
version: 1.0.0
license: Apache-2.0
copyright: Hasura Inc.
maintainer: vamshi@hasura.io
author: Vamshi Surabhi
synopsis: GraphQL API over Postgres
category: Database
build-type: Simple

flag developer
    description:
        operate in developer mode
    default: False
    manual: True

flag profile
    description:
        compile with profile options set
    default: False
    manual: True

library
    exposed-modules:
        Hasura.Prelude
        Hasura.Logging
        Hasura.EncJSON
        Hasura.Db
        Hasura.Cache
        Hasura.Server.App
        Hasura.Server.Auth
        Hasura.Server.Auth.JWT
        Hasura.Server.Init
        Hasura.Server.Context
        Hasura.Server.Middleware
        Hasura.Server.Logging
        Hasura.Server.Query
        Hasura.Server.Utils
        Hasura.Server.Cors
        Hasura.Server.Version
        Hasura.Server.CheckUpdates
        Hasura.Server.Telemetry
        Hasura.Server.SchemaUpdate
        Hasura.Server.PGDump
        Hasura.Server.Config
        Hasura.RQL.Types
        Hasura.RQL.Instances
        Hasura.RQL.Types.SchemaCache
        Hasura.RQL.Types.SchemaCacheTypes
        Hasura.RQL.Types.BoolExp
        Hasura.RQL.Types.Catalog
        Hasura.RQL.Types.Column
        Hasura.RQL.Types.Common
        Hasura.RQL.Types.DML
        Hasura.RQL.Types.Error
        Hasura.RQL.Types.EventTrigger
        Hasura.RQL.Types.Metadata
        Hasura.RQL.Types.Permission
        Hasura.RQL.Types.QueryCollection
        Hasura.RQL.Types.RemoteSchema
        Hasura.RQL.DDL.Deps
        Hasura.RQL.DDL.Permission.Internal
        Hasura.RQL.DDL.Permission.Triggers
        Hasura.RQL.DDL.Permission
        Hasura.RQL.DDL.Relationship
        Hasura.RQL.DDL.Relationship.Rename
        Hasura.RQL.DDL.Relationship.Types
        Hasura.RQL.DDL.Schema
        Hasura.RQL.DDL.Schema.Cache
        Hasura.RQL.DDL.Schema.Catalog
        Hasura.RQL.DDL.Schema.Diff
        Hasura.RQL.DDL.Schema.Enum
        Hasura.RQL.DDL.Schema.Function
        Hasura.RQL.DDL.Schema.Rename
        Hasura.RQL.DDL.Schema.Table
        Hasura.RQL.DDL.Metadata
        Hasura.RQL.DDL.Utils
        Hasura.RQL.DDL.EventTrigger
        Hasura.RQL.DDL.Headers
        Hasura.RQL.DDL.RemoteSchema
        Hasura.RQL.DDL.QueryCollection
        Hasura.RQL.DML.Delete
        Hasura.RQL.DML.Internal
        Hasura.RQL.DML.Insert
        Hasura.RQL.DML.Mutation
        Hasura.RQL.DML.Returning
        Hasura.RQL.DML.Select.Internal
        Hasura.RQL.DML.Select.Types
        Hasura.RQL.DML.Select
        Hasura.RQL.DML.Update
        Hasura.RQL.DML.Count
        Hasura.RQL.GBoolExp
        Hasura.GraphQL.Transport.HTTP.Protocol
        Hasura.GraphQL.Transport.HTTP
        Hasura.GraphQL.Transport.WebSocket.Protocol
        Hasura.GraphQL.Transport.WebSocket.Server
        Hasura.GraphQL.Transport.WebSocket
        Hasura.GraphQL.Schema.BoolExp
        Hasura.GraphQL.Schema.Common
        Hasura.GraphQL.Schema.Function
        Hasura.GraphQL.Schema.OrderBy
        Hasura.GraphQL.Schema.Select
        Hasura.GraphQL.Schema.Merge
        Hasura.GraphQL.Schema.Mutation.Common
        Hasura.GraphQL.Schema.Mutation.Insert
        Hasura.GraphQL.Schema.Mutation.Update
        Hasura.GraphQL.Schema.Mutation.Delete
        Hasura.GraphQL.Schema
        Hasura.GraphQL.Utils
        Hasura.GraphQL.Validate
        Hasura.GraphQL.Validate.Types
        Hasura.GraphQL.Validate.Context
        Hasura.GraphQL.Validate.Field
        Hasura.GraphQL.Validate.InputValue
        Hasura.GraphQL.Explain
        Hasura.GraphQL.Execute
        Hasura.GraphQL.Execute.Plan
        Hasura.GraphQL.Execute.Query
        Hasura.GraphQL.Execute.LiveQuery
        Hasura.GraphQL.Execute.LiveQuery.Types
        Hasura.GraphQL.Execute.LiveQuery.Multiplexed
        Hasura.GraphQL.Execute.LiveQuery.Fallback
        Hasura.GraphQL.Resolve
        Hasura.GraphQL.Resolve.Types
        Hasura.GraphQL.Resolve.Context
        Hasura.GraphQL.Resolve.BoolExp
        Hasura.GraphQL.Resolve.InputValue
        Hasura.GraphQL.Resolve.Introspect
        Hasura.GraphQL.Resolve.Insert
        Hasura.GraphQL.Resolve.Mutation
        Hasura.GraphQL.Resolve.Select
        Hasura.GraphQL.RemoteServer
        Hasura.GraphQL.Context
        Hasura.GraphQL.Logging
        Hasura.Events.Lib
        Hasura.Events.HTTP
        Hasura.HTTP
        Control.Lens.Extended
        Data.Text.Extended
        Data.Aeson.Extended
        Data.Sequence.NonEmpty
        Data.TByteString
        Data.HashMap.Strict.InsOrd.Extended
        Data.Parser.JSONPath
        Hasura.SQL.DML
        Hasura.SQL.Error
        Hasura.SQL.GeoJSON
        Hasura.SQL.Rewrite
        Hasura.SQL.Time
        Hasura.SQL.Types
        Hasura.SQL.Value
        Network.URI.Extended
        Ops
        Migrate
    hs-source-dirs: src-lib src-exec
    other-modules:
        Hasura.Server.Auth.JWT.Internal
        Hasura.Server.Auth.JWT.Logging
    default-language: Haskell2010
    default-extensions: ApplicativeDo BangPatterns ConstraintKinds
                        DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveGeneric
                        DeriveLift DeriveTraversable EmptyCase FlexibleContexts
                        FlexibleInstances GeneralizedNewtypeDeriving InstanceSigs
                        LambdaCase MultiParamTypeClasses MultiWayIf NoImplicitPrelude
                        OverloadedStrings QuasiQuotes ScopedTypeVariables TemplateHaskell
                        TupleSections TypeApplications TypeFamilies
    ghc-options: -O2 -foptimal-applicative-do -fdefer-typed-holes -Wall
                 -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
                 -Wredundant-constraints
    build-depends:
        base -any,
        pg-client -any,
        text -any,
        text-builder >=0.6,
        bytestring -any,
        postgresql-libpq -any,
        mtl -any,
        aeson -any,
        aeson-casing -any,
        unordered-containers -any,
        template-haskell -any,
        hashable -any,
        transformers -any,
        transformers-base -any,
        http-types -any,
        attoparsec -any,
        attoparsec-iso8601 >=1.0,
        time -any,
        scientific -any,
        Spock-core -any,
        split -any,
        optparse-applicative -any,
        containers -any,
        monad-control -any,
        monad-time -any,
        monad-validate -any,
        fast-logger -any,
        wai -any,
        postgresql-binary -any,
        process -any,
        uuid -any,
        vector -any,
        network -any,
        byteorder -any,
        cryptonite -any,
        jose -any,
        pem -any,
        x509 -any,
        asn1-encoding -any,
        asn1-types -any,
        warp -any,
        th-lift-instances -any,
        lens -any,
        graphql-parser -any,
        network-uri -any,
        case-insensitive -any,
        string-conversions -any,
        text-conversions -any,
        wreq -any,
        http-client -any,
        insert-ordered-containers -any,
        semver -any,
        mustache -any,
        ginger -any,
        file-embed -any,
        data-has -any,
        yaml -any,
        template-haskell >=2.11,
        websockets -any,
        wai-websockets -any,
        stm -any,
        stm-containers -any,
        list-t -any,
        async -any,
        base64-bytestring >=1.0,
        auto-update -any,
        regex-tdfa >=1.2,
        ansi-wl-pprint -any,
        ekg-core -any,
        ekg-json -any,
        ci-info -any,
        filepath >=1.4,
        mime-types >=0.1

executable graphql-engine
    main-is: Main.hs
    hs-source-dirs: src-exec
    other-modules:
        Ops
        Migrate
    default-language: Haskell2010
    default-extensions: ApplicativeDo BangPatterns ConstraintKinds
                        DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveGeneric
                        DeriveLift DeriveTraversable EmptyCase FlexibleContexts
                        FlexibleInstances GeneralizedNewtypeDeriving InstanceSigs
                        LambdaCase MultiParamTypeClasses MultiWayIf NoImplicitPrelude
                        OverloadedStrings QuasiQuotes ScopedTypeVariables TemplateHaskell
                        TupleSections TypeApplications TypeFamilies
    ghc-options: -O2 -foptimal-applicative-do -fdefer-typed-holes -Wall
                 -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
                 -Wredundant-constraints -threaded -rtsopts "-with-rtsopts=-N -I2"
    build-depends:
        base -any,
        warp >=3.2,
        graphql-engine -any,
        aeson >=1.0,
        bytestring >=0.10,
        mtl -any,
        optparse-applicative >=0.12,
        yaml -any,
        template-haskell >=2.11,
        time >=1.6,
        text -any,
        lens -any,
        unordered-containers >=0.2,
        pg-client -any,
        http-client -any,
        http-client-tls -any,
        stm -any,
        wreq -any,
        string-conversions -any,
        uuid -any,
        unix -any

