cabal-version: 1.12
name: graphql-parser
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: 2018 Hasura Technologies Pvt. Ltd.
maintainer: vamshi@hasura.io
author: Vamshi Surabhi
build-type: Simple
extra-source-files:
    README.md
    ChangeLog.md

library
    exposed-modules:
        Language.GraphQL.Draft.Generator.Document
        Language.GraphQL.Draft.Generator.Primitives
        Language.GraphQL.Draft.Generator.Selection
        Language.GraphQL.Draft.Generator.TypeDefinition
        Language.GraphQL.Draft.Instances
        Language.GraphQL.Draft.Parser
        Language.GraphQL.Draft.Printer
        Language.GraphQL.Draft.Printer.ByteString
        Language.GraphQL.Draft.Printer.LazyText
        Language.GraphQL.Draft.Printer.Pretty
        Language.GraphQL.Draft.Printer.Text
        Language.GraphQL.Draft.Syntax
        Language.GraphQL.Draft.TH
    hs-source-dirs: src
    other-modules:
        Paths_graphql_parser
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    build-depends:
        aeson -any,
        attoparsec -any,
        base >=4.7 && <5,
        bytestring -any,
        containers -any,
        filepath -any,
        hedgehog -any,
        prettyprinter -any,
        protolude -any,
        scientific -any,
        template-haskell -any,
        text -any,
        text-builder -any,
        th-lift-instances -any,
        unordered-containers -any,
        vector -any

test-suite graphql-parser-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    other-modules:
        Paths_graphql_parser
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    build-depends:
        aeson -any,
        attoparsec -any,
        base >=4.7 && <5,
        bytestring -any,
        containers -any,
        filepath -any,
        graphql-parser -any,
        hedgehog -any,
        prettyprinter -any,
        protolude -any,
        scientific -any,
        template-haskell -any,
        text -any,
        text-builder -any,
        th-lift-instances -any,
        unordered-containers -any,
        vector -any

benchmark graphql-parser-bench
    type: exitcode-stdio-1.0
    main-is: Benchmark.hs
    hs-source-dirs: bench
    other-modules:
        Paths_graphql_parser
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    build-depends:
        aeson -any,
        attoparsec -any,
        base >=4.7 && <5,
        bytestring -any,
        containers -any,
        criterion -any,
        filepath -any,
        graphql-parser -any,
        hedgehog -any,
        prettyprinter -any,
        protolude -any,
        scientific -any,
        template-haskell -any,
        text -any,
        text-builder -any,
        th-lift-instances -any,
        unordered-containers -any,
        vector -any
